--- a/README.html
+++ b/README.html
@@ -625,9 +625,7 @@ AI-generated coding, <strong>quallmer</strong> provides
 <code>qlm_validate()</code> for assessing accuracy against gold
 standards. With <code>qlm_replicate()</code>, researchers can
 systematically compare results across different models and settings to
-assess sensitivity and reproducibility. The package also includes
-<code>validate_app()</code>, an interactive app for manual coding,
-reviewing AI-generated output, and computing agreement metrics.</p>
+assess sensitivity and reproducibility.</p>
 <p><strong>The quallmer package makes AI-assisted qualitative coding
 accessible without requiring deep expertise in R, programming or machine
 learning.</strong></p>
@@ -680,6 +678,33 @@ codebooks, or parameters).</li>
 configurations.</li>
 <li>Enables systematic assessment of coding reliability and sensitivity
 to model choices.</li>
+</ul>
+<h2 id="provenance-tracking">Provenance tracking</h2>
+<p>All <code>qlm_coded</code>, <code>qlm_comparison</code>, and
+<code>qlm_validation</code> objects automatically capture provenance
+metadata including model parameters, timestamps, and parent-child
+relationships. This enables full workflow traceability and
+reproducibility.</p>
+<h4 id="qlm_trail"><code>qlm_trail()</code></h4>
+<ul>
+<li>Extracts and displays the complete provenance chain from coded
+objects.</li>
+<li>Shows the history of coding runs including model parameters,
+timestamps, and parent relationships.</li>
+<li>Reconstructs full lineage by following parent-child references
+across multiple objects.</li>
+<li>Automatically captures branching workflows when multiple coded
+objects are compared or validated.</li>
+</ul>
+<h4 id="qlm_trail_save-qlm_trail_export-qlm_trail_report"><code>qlm_trail_save()</code>,
+<code>qlm_trail_export()</code>, <code>qlm_trail_report()</code></h4>
+<ul>
+<li><strong>Save</strong>: Archive provenance trails to RDS format for
+long-term storage.</li>
+<li><strong>Export</strong>: Convert trails to JSON format for
+portability and integration with other tools.</li>
+<li><strong>Report</strong>: Generate human-readable Quarto/RMarkdown
+documents summarizing the complete workflow history.</li>
 </ul>
 <h2 id="interactive-validation">Interactive validation</h2>
 <p>For an interactive Shiny application to perform manual coding, review
